fix(custom.scss): show description on mobile also

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1195,6 +1195,7 @@ footer .secondary-links a {
 .career-card {
   &__summary {
     margin-bottom: 22px;
+    display: block !important;
   }
 }
 
